objects/Contact.object
<CustomObject>
    <fields>
        <fullName>X5_Down2__c</fullName>
        <formula>Account.Parent.Parent_X5_Down__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5% Down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X5_Down__c</fullName>
        <formula>Account.X5_Down2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5% Down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Years_in_Current_Job__c</fullName>
        <label>Years in Current Job</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_in_Profession__c</fullName>
        <label>Years in Profession</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_of_School__c</fullName>
        <label>Years of School</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Lead_Score__c</fullName>
        <label>Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_Contacts</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Role__c</field>
            <operation>equals</operation>
            <value>Title</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Title</value>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Andrew_HECM_Uncontacted</fullName>
        <booleanFilter>1 and 2</booleanFilter>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CostCo_Onboarding_Status__c</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Sales_Director__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CostCo_Onboarding_Status__c</field>
            <operation>equals</operation>
            <value>Uncontacted</value>
        </filters>
        <filters>
            <field>Related_Campaign__c</field>
            <operation>equals</operation>
            <value>Reverse Mortgage Pilot</value>
        </filters>
        <label>HECM 1Uncontacted</label>
    </listViews>
    <listViews>
        <fullName>Banc_Home_Loans_TEST</fullName>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CostCo_Onboarding_Status__c</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Sales_Director__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Banc Home Loans</value>
        </filters>
        <label>Banc Home Loans TEST</label>
    </listViews>
    <listViews>
        <fullName>CostCo_Pipeline</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Sales_Director__c</columns>
        <columns>CostCo_Onboarding_Status__c</columns>
        <columns>Number_of_Leads__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CostCo_Onboarding_Status__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>CostCo Pipeline</label>
        <sharedTo>
            <role>Business_Operations</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>East_Coast_All</fullName>
        <booleanFilter>1 and 2 and 3 and 4</booleanFilter>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Trained__c</columns>
        <columns>Mailing_Address__c</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Sales_Director__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
            <value>RPM Mortgage,Guaranteed Rate</value>
        </filters>
        <filters>
            <field>Territory__c</field>
            <operation>equals</operation>
            <value>07 - Greater New York,08 - New England,05 - Mid Atlantic</value>
        </filters>
        <filters>
            <field>CONTACT.TITLE</field>
            <operation>notContain</operation>
            <value>assistant,processor</value>
        </filters>
        <filters>
            <field>Sales_Director__c</field>
            <operation>equals</operation>
            <value>Kevin Wu</value>
        </filters>
        <label>East Coast - All</label>
    </listViews>
    <listViews>
        <fullName>Escrow_and_Trustee</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>Order_Type__c</columns>
        <columns>Property_State__c</columns>
        <columns>Contact_Role__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Escrow,Contact.Trustee</value>
        </filters>
        <label>Escrow and Trustee</label>
    </listViews>
    <listViews>
        <fullName>HECM_0All</fullName>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CostCo_Onboarding_Status__c</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Sales_Director__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Related_Campaign__c</field>
            <operation>equals</operation>
            <value>Reverse Mortgage Pilot</value>
        </filters>
        <label>HECM 0All</label>
    </listViews>
    <listViews>
        <fullName>HECM_5Onboarded</fullName>
        <booleanFilter>1 and 2</booleanFilter>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CostCo_Onboarding_Status__c</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Sales_Director__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CostCo_Onboarding_Status__c</field>
            <operation>equals</operation>
            <value>Onboarded</value>
        </filters>
        <filters>
            <field>Related_Campaign__c</field>
            <operation>equals</operation>
            <value>Reverse Mortgage Pilot</value>
        </filters>
        <label>HECM 5Onboarded</label>
    </listViews>
    <listViews>
        <fullName>HECM_6Signed</fullName>
        <booleanFilter>1 and 2</booleanFilter>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CostCo_Onboarding_Status__c</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Sales_Director__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CostCo_Onboarding_Status__c</field>
            <operation>equals</operation>
            <value>Signed</value>
        </filters>
        <filters>
            <field>Related_Campaign__c</field>
            <operation>equals</operation>
            <value>Reverse Mortgage Pilot</value>
        </filters>
        <label>HECM 6Signed</label>
    </listViews>
    <listViews>
        <fullName>HECM_Connected</fullName>
        <booleanFilter>1 and 2</booleanFilter>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CostCo_Onboarding_Status__c</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Sales_Director__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CostCo_Onboarding_Status__c</field>
            <operation>equals</operation>
            <value>Qualified – Lo,Qualified – Med,Qualified – Hi,Deal in Hand</value>
        </filters>
        <filters>
            <field>Related_Campaign__c</field>
            <operation>equals</operation>
            <value>Reverse Mortgage Pilot</value>
        </filters>
        <label>HECM 3Connected</label>
    </listViews>
    <listViews>
        <fullName>HECM_Not_A_Prospect</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CostCo_Onboarding_Status__c</field>
            <operation>equals</operation>
            <value>Not a Prospect</value>
        </filters>
        <filters>
            <field>Related_Campaign__c</field>
            <operation>equals</operation>
            <value>Reverse Mortgage Pilot</value>
        </filters>
        <label>HECM Not A Prospect</label>
    </listViews>
    <listViews>
        <fullName>HECM_Scheduled</fullName>
        <booleanFilter>1 and 2</booleanFilter>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CostCo_Onboarding_Status__c</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Sales_Director__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CostCo_Onboarding_Status__c</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filters>
        <filters>
            <field>Related_Campaign__c</field>
            <operation>equals</operation>
            <value>Reverse Mortgage Pilot</value>
        </filters>
        <label>HECM 4Scheduled</label>
    </listViews>
    <listViews>
        <fullName>Kevin_Closed_a_deal_with_us</fullName>
        <columns>Last_Closed_Deal_Wire_Date__c</columns>
        <columns>Last_Lead_Submission__c</columns>
        <columns>Last_Portal_Inquiry__c</columns>
        <columns>Last_Portal_Login__c</columns>
        <columns>Trained__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Sales_Director__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Director__c</field>
            <operation>equals</operation>
            <value>Kevin Wu</value>
        </filters>
        <label>Kevin - Closed a deal with us</label>
    </listViews>
    <listViews>
        <fullName>Kevin_GRATE</fullName>
        <booleanFilter>1 and 2 and 3</booleanFilter>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Trained__c</columns>
        <columns>Mailing_Address__c</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Sales_Director__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Guaranteed Rate</value>
        </filters>
        <filters>
            <field>CONTACT.TITLE</field>
            <operation>notContain</operation>
            <value>assistant</value>
        </filters>
        <filters>
            <field>Sales_Director__c</field>
            <operation>equals</operation>
            <value>Kevin Wu</value>
        </filters>
        <label>Kevin - GRATE</label>
    </listViews>
    <listViews>
        <fullName>Kevin_GRATE_Engaged</fullName>
        <booleanFilter>1 and 2 and 3 and 4 and 5</booleanFilter>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Trained__c</columns>
        <columns>Mailing_Address__c</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Sales_Director__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Guaranteed Rate</value>
        </filters>
        <filters>
            <field>CONTACT.TITLE</field>
            <operation>notContain</operation>
            <value>assistant</value>
        </filters>
        <filters>
            <field>Sales_Director__c</field>
            <operation>equals</operation>
            <value>Kevin Wu</value>
        </filters>
        <filters>
            <field>Engagement_Status__c</field>
            <operation>equals</operation>
            <value>1 - High,2 - Medium,3 - Low</value>
        </filters>
        <filters>
            <field>Production_Status__c</field>
            <operation>equals</operation>
            <value>1 - High,2 - Medium,3 - Low</value>
        </filters>
        <label>Kevin - GRATE Engaged</label>
    </listViews>
    <recordTypes>
        <fullName>Complaint</fullName>
        <active>true</active>
        <description>This record type is used for complaint cases where the contact has no applicable bucket to place them.</description>
        <label>Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>Escrow</fullName>
        <active>true</active>
        <label>Escrow</label>
    </recordTypes>
    <recordTypes>
        <fullName>Escrow_Assistant</fullName>
        <active>true</active>
        <label>Escrow Assistant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flood_Insurance</fullName>
        <active>true</active>
        <label>Flood Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hazard_Insurance</fullName>
        <active>true</active>
        <label>Hazard Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household</fullName>
        <active>true</active>
        <description>012E00000002OGm</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lender</fullName>
        <active>true</active>
        <description>012E00000002OGw</description>
        <label>Lender</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loan_Ops</fullName>
        <active>true</active>
        <label>Loan Ops</label>
    </recordTypes>
    <recordTypes>
        <fullName>Public_Relations</fullName>
        <active>true</active>
        <label>Public Relations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Real_Estate_Broker</fullName>
        <active>true</active>
        <description>012E00000002OGr</description>
        <label>Real Estate Broker</label>
    </recordTypes>
    <recordTypes>
        <fullName>Title</fullName>
        <active>true</active>
        <label>Title</label>
    </recordTypes>
    <recordTypes>
        <fullName>Title_Assistant</fullName>
        <active>true</active>
        <label>Title Assistant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Title_Company</fullName>
        <active>true</active>
        <label>Title Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trustee</fullName>
        <active>true</active>
        <description>Trustee from Encompass</description>
        <label>Trustee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_Management</fullName>
        <active>true</active>
        <description>01244000000DH5X</description>
        <label>Vendor Management</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LOP_Address_Required_Validations</fullName>
        <active>true</active>
        <description>Email Address is required for sending data to LOP</description>
        <errorConditionFormula>ISBLANK( Email ) &amp;&amp;  RecordType.Name = "Lender" &amp;&amp;  TEXT(Contact_Role__c) = "Loan Officer"</errorConditionFormula>
        <errorMessage>Email is required to save Loan Officer contacts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LOP_FirstName_Required_Validations</fullName>
        <active>true</active>
        <description>Validation required before sending the values to the LOP.</description>
        <errorConditionFormula>ISBLANK( FirstName )</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>First Name is required to save the contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lender_Contact_Role</fullName>
        <active>true</active>
        <description>Lender record types must have a defined contact role</description>
        <errorConditionFormula>RecordType.Name = "Lender"&amp;&amp;
 ISblank( TEXT(Contact_Role__c))</errorConditionFormula>
        <errorDisplayField>Contact_Role__c</errorDisplayField>
        <errorMessage>Contact Role must be defined for Lender contacts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loan_Officer_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>RecordType.Name = "Lender" &amp;&amp;
ISPICKVAL(Contact_Role__c, "Loan Officer") &amp;&amp;

(
 ISBLANK(Sales_Director__c)||
 ISBLANK(Branch_Name__c) ||
 ISBLANK(TEXT(Territory__c))
)</errorConditionFormula>
        <errorMessage>Loan Officers must have a Sales Director, Territory, and Branch. Please update.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_SysAdmin_can_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
not(isnew()),
Only_SysAdmin_Can_Edit__c = true,
$Profile.Name &lt;&gt; "System Administrator"
)</errorConditionFormula>
        <errorMessage>Only System Administrators users can edit this Contact</errorMessage>
    </validationRules>
</CustomObject>